// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Player/App Default 1`] = `
<div
  className="sc-hKwDye sc-furwcr hEyDkm hvZUbf"
/>
`;

exports[`Storyshots Player/Buttons/ChangeSongButton Default Next 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="切至下一首"
>
  下一首
</button>
`;

exports[`Storyshots Player/Buttons/ChangeSongButton Default Prev 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="切至上一首"
>
  上一首
</button>
`;

exports[`Storyshots Player/Buttons/ChangeSongButton Next With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="切至下一首"
>
  <i
    className="fas fa-forward"
  />
</button>
`;

exports[`Storyshots Player/Buttons/ChangeSongButton Prev With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="切至上一首"
>
  <i
    className="fas fa-backward"
  />
</button>
`;

exports[`Storyshots Player/Buttons/JumpButton Default Next 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="跳至10秒後"
>
  後10秒
</button>
`;

exports[`Storyshots Player/Buttons/JumpButton Default Prev 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="跳至10秒前"
>
  前10秒
</button>
`;

exports[`Storyshots Player/Buttons/JumpButton Next With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="跳至10秒前"
>
  <i
    className="fas fa-redo-alt"
  />
</button>
`;

exports[`Storyshots Player/Buttons/JumpButton Prev With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="跳至10秒前"
>
  <i
    className="fas fa-undo-alt"
  />
</button>
`;

exports[`Storyshots Player/Buttons/PlayButton Paused 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="播放"
>
  播放
</button>
`;

exports[`Storyshots Player/Buttons/PlayButton Paused With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="播放"
>
  <i
    className="far fa-play-circle"
  />
</button>
`;

exports[`Storyshots Player/Buttons/PlayButton Playing 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="暫停"
>
  暫停
</button>
`;

exports[`Storyshots Player/Buttons/PlayButton Playing With Content 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="暫停"
>
  <i
    className="far fa-pause-circle"
  />
</button>
`;

exports[`Storyshots Player/Buttons/RateButton Default 1`] = `
<button
  className="sc-bdvvtL hssuwF"
  onClick={[Function]}
  title="以1倍速度播放"
>
  1
  x
</button>
`;

exports[`Storyshots Player/Buttons/SleepGroup Default 1`] = `
<div
  className="sc-crHmcD fsrLkM"
>
  <button
    className="sc-bdvvtL hssuwF"
    onClick={[Function]}
    title="設定睡眠"
  >
    設定睡眠
  </button>
</div>
`;

exports[`Storyshots Player/Buttons/SleepGroup/SleepList Default 1`] = `
<ul
  className="sc-kDTinF sc-egiyK hQTiFY gDWTYE"
  onClick={[Function]}
>
  <li
    className="sc-iqseJM fOvpMJ active"
    data-minutes={0}
  >
    off
  </li>
  <li
    className="sc-iqseJM fOvpMJ"
    data-minutes={1}
  >
    1分鐘
  </li>
  <li
    className="sc-iqseJM fOvpMJ"
    data-minutes={2}
  >
    2分鐘
  </li>
</ul>
`;

exports[`Storyshots Player/Loading Default 1`] = `
<div
  className="sc-eCImPb sc-fotOHu huntRY inuUij"
>
  <i
    className="fas fa-spinner spinner"
  />
</div>
`;

exports[`Storyshots Player/Player Autoplay 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={true}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Change Rates 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="以1倍速度播放"
        >
          1
          x
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Change Song 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="切至上一首"
        >
          <i
            className="fas fa-backward"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="切至下一首"
        >
          <i
            className="fas fa-forward"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Complete 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="跳至10秒前"
        >
          <i
            className="fas fa-undo-alt"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="切至上一首"
        >
          <i
            className="fas fa-backward"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="切至下一首"
        >
          <i
            className="fas fa-forward"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="跳至10秒後"
        >
          <i
            className="fas fa-redo-alt"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="以1倍速度播放"
        >
          1
          x
        </button>
        <div
          className="sc-crHmcD fsrLkM"
        >
          <button
            className="sc-bdvvtL hssuwF"
            onClick={[Function]}
            title="設定睡眠"
          >
            <i
              className="fas fa-hourglass-half"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Default 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Empty 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src=""
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu jOsfHF"
    disabled={true}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Error 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Exceed Duration 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Jump Gap 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="跳至10秒前"
        >
          <i
            className="fas fa-undo-alt"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="跳至10秒後"
        >
          <i
            className="fas fa-redo-alt"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Sleep 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      >
        <div
          className="sc-crHmcD fsrLkM"
        >
          <button
            className="sc-bdvvtL hssuwF"
            onClick={[Function]}
            title="設定睡眠"
          >
            <i
              className="fas fa-hourglass-half"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Player Start From 1`] = `
<div
  data-testid="player"
>
  <audio
    autoPlay={false}
    data-testid="audio"
    onCanPlay={[Function]}
    onEnded={[Function]}
    onLoadedMetadata={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onTimeUpdate={[Function]}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
  />
  <div
    className="sc-iCfMLu dhiTeO"
  >
    <div
      className="sc-dkPtRN sc-ksdxgE bFyXfZ"
    >
      <div>
        <h5
          className="sc-bqiRlB dvuwce"
        >
          SoundHelix Song 1
        </h5>
        <h6
          className="sc-bqiRlB kaMNEb"
        >
          T. Schürger
        </h6>
      </div>
      <div
        className="sc-hBUSln dKoJBX"
      >
        <img
          alt="SoundHelix Song 1"
          src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="sc-iCfMLu dhiTeO"
    disabled={false}
  >
    <div
      className="sc-jrQzAO cFhiBm"
    >
      <div
        className="sc-gsDKAQ fNHwLb"
        data-testid="full-box"
      >
        <input
          className="sc-pVTFL faCmed"
          onInput={[Function]}
          onMouseUp={[Function]}
          type="range"
          value={0}
          width={0}
        />
      </div>
      <div
        className="sc-dkPtRN bFyXfZ"
      >
        <span>
          00:00
        </span>
        <span>
          00:00
        </span>
      </div>
    </div>
    <div
      className="sc-jRQBWg dzlthR"
    >
      <div
        className="sc-gKclnd hKmzsw"
      >
        <button
          className="sc-bdvvtL hssuwF"
          onClick={[Function]}
          title="播放"
        >
          <i
            className="far fa-play-circle"
          />
        </button>
      </div>
      <div
        className="sc-gKclnd cpwZVz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Player/Progress Default 1`] = `
<div
  className="sc-jrQzAO cFhiBm"
>
  <div
    className="sc-gsDKAQ fNHwLb"
    data-testid="full-box"
  >
    <input
      className="sc-pVTFL faCmed"
      onInput={[Function]}
      onMouseUp={[Function]}
      type="range"
      value={0}
      width={0}
    />
  </div>
</div>
`;

exports[`Storyshots Player/Progress Original 1`] = `
<div
  className="sc-jrQzAO cFhiBm"
>
  <div
    className="sc-gsDKAQ fNHwLb"
    data-testid="full-box"
  >
    <input
      className="sc-pVTFL faCmed"
      onInput={[Function]}
      onMouseUp={[Function]}
      type="range"
      value={0}
      width={0}
    />
  </div>
  <div
    className="sc-dkPtRN bFyXfZ"
  >
    <span>
      0
    </span>
    <span>
      100
    </span>
  </div>
</div>
`;

exports[`Storyshots Player/Progress Time 1`] = `
<div
  className="sc-jrQzAO cFhiBm"
>
  <div
    className="sc-gsDKAQ fNHwLb"
    data-testid="full-box"
  >
    <input
      className="sc-pVTFL faCmed"
      onInput={[Function]}
      onMouseUp={[Function]}
      type="range"
      value={0}
      width={0}
    />
  </div>
  <div
    className="sc-dkPtRN bFyXfZ"
  >
    <span>
      00:00
    </span>
    <span>
      01:40
    </span>
  </div>
</div>
`;

exports[`Storyshots Player/TrackTitle Default 1`] = `
<div
  className="sc-dkPtRN sc-ksdxgE bFyXfZ"
>
  <div>
    <h5
      className="sc-bqiRlB dvuwce"
    >
      Wedding Dress
    </h5>
    <h6
      className="sc-bqiRlB kaMNEb"
    >
      Jason
    </h6>
  </div>
  <div
    className="sc-hBUSln dKoJBX"
  >
    
  </div>
</div>
`;

exports[`Storyshots Player/TrackTitle With Image 1`] = `
<div
  className="sc-dkPtRN sc-ksdxgE bFyXfZ"
>
  <div>
    <h5
      className="sc-bqiRlB dvuwce"
    >
      Wedding Dress
    </h5>
    <h6
      className="sc-bqiRlB kaMNEb"
    >
      Jason
    </h6>
  </div>
  <div
    className="sc-hBUSln dKoJBX"
  >
    <img
      alt="Wedding Dress"
      src="https://play-lh.googleusercontent.com/mOkjjo5Rzcpk7BsHrsLWnqVadUK1FlLd2-UlQvYkLL4E9A0LpyODNIQinXPfUMjUrbE"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
